[gd_scene load_steps=5 format=3 uid="uid://dvj2w33sog2yo"]

[ext_resource type="PackedScene" uid="uid://b6l1ekwouh6jl" path="res://scenes/Bullet.tscn" id="1_bv4ce"]
[ext_resource type="Script" path="res://scripts/Hand.gd" id="1_m1l0g"]
[ext_resource type="Resource" uid="uid://dtou5fr85rka0" path="res://data/bullets/standard_bullet.tres" id="2_mmhbv"]
[ext_resource type="Resource" uid="uid://cwev4kyhnygw1" path="res://data/bullets/fullmetal_bullet.tres" id="3_11650"]

[node name="Hand" type="Node2D"]
script = ExtResource("1_m1l0g")

[node name="Bullet1" parent="." instance=ExtResource("1_bv4ce")]
visible = false
position = Vector2(-306, 0)
bullet = ExtResource("2_mmhbv")

[node name="Bullet2" parent="." instance=ExtResource("1_bv4ce")]
visible = false
position = Vector2(-215, 0)
bullet = ExtResource("3_11650")

[node name="Bullet3" parent="." instance=ExtResource("1_bv4ce")]
visible = false
position = Vector2(-130, 0)
bullet = ExtResource("2_mmhbv")

[node name="Bullet4" parent="." instance=ExtResource("1_bv4ce")]
visible = false
position = Vector2(-40, 0)
bullet = ExtResource("2_mmhbv")

[node name="Bullet5" parent="." instance=ExtResource("1_bv4ce")]
visible = false
position = Vector2(41, 0)
bullet = ExtResource("2_mmhbv")

[node name="Bullet6" parent="." instance=ExtResource("1_bv4ce")]
visible = false
position = Vector2(125, 0)
bullet = ExtResource("2_mmhbv")

[node name="Bullet7" parent="." instance=ExtResource("1_bv4ce")]
visible = false
position = Vector2(213, 0)
bullet = ExtResource("2_mmhbv")

[node name="Bullet8" parent="." instance=ExtResource("1_bv4ce")]
visible = false
position = Vector2(298, 0)
bullet = ExtResource("2_mmhbv")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="buttonPressed" from="Bullet1" to="." method="_on_bullet_1_button_pressed"]
[connection signal="buttonPressed" from="Bullet2" to="." method="_on_bullet_2_button_pressed"]
[connection signal="buttonPressed" from="Bullet3" to="." method="_on_bullet_3_button_pressed"]
[connection signal="buttonPressed" from="Bullet4" to="." method="_on_bullet_4_button_pressed"]
[connection signal="buttonPressed" from="Bullet5" to="." method="_on_bullet_5_button_pressed"]
[connection signal="buttonPressed" from="Bullet6" to="." method="_on_bullet_6_button_pressed"]
[connection signal="buttonPressed" from="Bullet7" to="." method="_on_bullet_7_button_pressed"]
[connection signal="buttonPressed" from="Bullet8" to="." method="_on_bullet_8_button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
